cabal-version:       >=1.10
name:                wonky
version:             0.1.0.0
license-file:        LICENSE
author:              Ian MacGuigan
maintainer:          ian.macguigan@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  ghc-options:         -Wall
  exposed-modules:     Network.HTTP.Wonky                                       
  build-depends:       base >=4.12 && <4.13
                     , http-client
                     , http-client-tls
                     , http-types
                     , case-insensitive
                     , data-default
                     , text
                     , bytestring
                     , unliftio
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings                       
